Add some basic tracing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 anyhow = "1.0.98"
 niri-ipc = "25.5.1"
 regex = "1.11.1"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
