Update manifest details

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,19 @@
 name = "niri-pip"
 version = "0.1.0"
 edition = "2024"
+license = "EUPL-1.2"
+authors = ["Matilde Morrone <contact@morrone.dev>"]
+readme = "README.md"
+repository = "https://github.com/morr0ne/niri-pip"
 
 [dependencies]
 anyhow = "1.0.98"
 niri-ipc = "25.5.1"
 regex = "1.11.1"
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
+tracing-subscriber = { version = "0.3.19", default-features = false, features = [
+    "ansi",
+    "env-filter",
+    "fmt",
+    "std",
+] }
