Add some basic argument parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ strip = true
 anyhow = "1.0.98"
 niri-ipc = "25.5.1"
 regex = "1.11.1"
+sap = "0.0.5"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", default-features = false, features = [
     "ansi",
-    "env-filter",
     "fmt",
     "std",
 ] }
